faas-frontend/frontend-deployment.yaml
# faas-frontend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: faas-frontend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: faas-frontend
  template:
    metadata:
      labels:
        app: faas-frontend
    spec:
      containers:
      - name: faas-frontend
        image: localhost:32000/faas-frontend
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: faas-frontend-service
spec:
  selector:
    app: faas-frontend
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
  type: ClusterIP
