faas-frontend/frontend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: faas-frontend-service
spec:
  type: NodePort          # passe en NodePort
  selector:
    app: faas-frontend
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
      nodePort: 30080    # port fixe choisi (30000-32767)
