faas-frontend/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: faas-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  rules:
  - host: faas.local
    http:
      paths:
      - path: /api(/|$)(.*)
        pathType: Prefix
        backend:
          service:
            name: backend-api-service
            port:
              number: 80
      - path: /
        pathType: Prefix
        backend:
          service:
            name: faas-frontend-service  # CORRECTION ICI
            port:
              number: 80
